# thonny-tunisiaschools-macos

./: README.md  pyproject.toml
thonnycontrib/tunisiaschools/: __init__.py
