[project]
name = "thonny-tunisiaschools-macos"
version = "0.0.16"
description = "A Thonny IDE plug-in that offers PyQt / QT / Python support for Tunisian computer science secondary teachers / students. macOS support added by JOSEPH218."
readme = "README.md"
requires-python = ">=3.0"
dependencies = ["thonny>=3.2.1"]
license = "GPL-3.0-only"
authors = [{name = "Selmen Arous", email = "selmen.arous@gmail.com"}]
maintainers = [{name = "JOSEPH218"}]
keywords = ["PyQt", "QT", "Tunisia", "School", "Teaching", "Education", "macOS"]
classifiers = [
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Education",
    "Topic :: Software Development",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["thonnycontrib*"]

[tool.setuptools.package-data]
"thonnycontrib.tunisiaschools" = ["res/*"]

[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"
